Add suport for ASHMEM, PMEM, BINDER, and LOWMEMORYKILLER.

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -76,6 +76,8 @@ source "drivers/mfd/Kconfig"
 
 source "drivers/regulator/Kconfig"
 
+source "drivers/switch/Kconfig"
+
 source "drivers/media/Kconfig"
 
 source "drivers/video/Kconfig"
